Filtering on Examples with 0 or 1 row now works